Source/WebCore/css/CSSSelector.h
@@ -110,6 +110,7 @@ namespace WebCore {
             PseudoClassAutofillStrongPassword,
             PseudoClassAutofillStrongPasswordViewable,
             PseudoClassHover,
+            PseudoClassDirectFocus,
             PseudoClassDrag,
             PseudoClassFocus,
             PseudoClassFocusWithin,
